correcoes deps js 3