@@ -26,6 +26,7 @@ import sgc.testutils.UnidadeTestBuilder;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
@@ -227,7 +228,7 @@ class PainelServiceTest {
                     .comSuperior(pai)
                     .build();
 
-            when(unidadeService.buscarMapaHierarquia()).thenReturn(Collections.emptyMap());
+            when(unidadeService.buscarMapaHierarquia()).thenReturn(Map.of(1L, List.of(2L)));
             when(unidadeService.buscarIdsDescendentes(eq(1L), any())).thenReturn(List.of(2L));
             when(unidadeService.buscarIdsDescendentes(eq(2L), any())).thenReturn(Collections.emptyList());
 
